remove volumes from docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - "80:5000"
     volumes:
-      - "./:/app/:ro"
+      # - "./:/app/:ro"
   mongo:
     image: mongo:latest
     environment:
